results page added to print out

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -38,6 +38,7 @@
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="profile_main" href="/profile_main">Profile</a>
           <a class="nav-item nav-link" id="ana_cre_main" href="/ana_cre_main">Analyze/Create</a>
+          <a class="nav-item nav-link" id="history" href="/history">History</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
