building database for to store analyised data and gen CL

--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -20,6 +20,8 @@
 
 <br />
 
-<button id="saveButton" class="btn btn-primary">Save Job Ad Details</button>
+<form action="{{ url_for('views.results') }}" method="POST">
+    <button type="submit" class="btn btn-primary">Run Backend Script</button>
+</form>
 
 {% endblock %}
