added bootstrap stripped table to job history

--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -5,28 +5,28 @@
 <br />
 <h1 align="left">Job Application History</h1>
 <br />
-<table>
+<table class="table table-striped">
     <thead>
       <tr>
         <th>Covering Letter</th>
         <th>Job Ad</th>
         <th>Recruiter's Name</th>
         <th>Company Name</th>
-        <th>ATS Keywords</th>
         <th>Position</th>
+        <th>ATS Keywords</th>
         <th>Technical Skills</th>
         <th>Timestamp</th>
       </tr>
     </thead>
     <tbody>
       {% for history_entry in job_history_data %}
-        <tr>
-          <td>{{ history_entry.covering_letter }}</td>
-          <td>{{ history_entry.job_ad }}</td>
+        <tr> 
+          <td><button class="popup-button" data-text="{{ history_entry.covering_letter}}" data-id="{{ history_entry.id}}">View CL</button></td>
+          <td><button class="popup-button" data-text="{{ history_entry.job_ad }}" data-id="{{ history_entry.id }}">View Job</button></td>
           <td>{{ history_entry.recruiters_name }}</td>
           <td>{{ history_entry.company_name }}</td>
-          <td>{{ history_entry.ats_keywords }}</td>
           <td>{{ history_entry.position }}</td>
+          <td><button class="popup-button" data-text="{{ history_entry.ats_keywords }}" data-id="{{ history_entry.id }}">View ATS</button></td>
           <td>{{ history_entry.technical_skills }}</td>
           <td>{{ history_entry.timestamp }}</td>
         </tr>
