added buttons to switch between view for job history

--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -4,6 +4,8 @@
 
 <br />
 <h1 align="left">Job Application History</h1>
+<button type="button" class="btn btn-primary" id="data">Job Application History</button>
+<button type="button" class="btn btn-primary" id="data">Job Analytics</button>
 <br />
     <div class="container mt-3">
         <table class="table table-striped">
