added toggle between application and analytics

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,6 +19,7 @@
       href="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.css"
       crossorigin="anonymous"
     />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>{% block title %}Home{% endblock %}</title>
   </head>
 
