--- a/website/templates/history/history_data_table.html
+++ b/website/templates/history/history_data_table.html
@@ -41,19 +41,15 @@
                     </td>
                     <td>{{ history_entry.timestamp }}</td>
                     <td>
-                    <button type="button" class="btn btn-danger" onClick="deleteApplication({{ history_entry.id }})">
-                        Delete
-                    </button>
+                        <button type="button" class="btn btn-danger" onclick="deleteApplication({{ history_entry.id }})">
+                            Delete
+                        </button>
                 </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/popper.js@2.11.6/dist/umd/popper.min.js" integrity="sha384-ToszPY8B9zpBb0KKhP2j3h/XyKtu8uyDVIaIwfl1q5G5Fsd5SY6f8p00JECfUKF5" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-6tz7No9l1T+hZx5z2w6f+JXjSMfD5Dk/fC4xBb4E/TFtF0cSrNVjQFAF8k5sdt7ZP" crossorigin="anonymous"></script>
-
 
 <script>
 
