--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -23,6 +23,22 @@
     <script src="https://unpkg.com/popper.js@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@2.11.6/dist/umd/popper.min.js" integrity="sha384-ToszPY8B9zpBb0KKhP2j3h/XyKtu8uyDVIaIwfl1q5G5Fsd5SY6f8p00JECfUKF5" crossorigin="anonymous"></script>
     <title>{% block title %}Home{% endblock %}</title>
+    <style>
+      /* Add these styles to your CSS to create a sticky footer */
+      html, body {
+        height: 100%;
+        margin: 0;
+      }
+
+      body {
+        display: flex;
+        flex-direction: column;
+      }
+
+      footer {
+        margin-top: auto; /* Push the footer to the bottom */
+      }
+    </style>
   </head>
 
   <body>
@@ -158,24 +174,23 @@
         </script>
       {% endblock %}
 
-    <!-- Footer section -->
-    <footer class="bg-dark text-center text-white fixed-bottom">
+    <footer class="bg-dark text-center text-white">
       <!-- Grid container -->
-      <div class="container p-4 pb-0">
+      <div class="container p-4">
         <!-- Section: Form -->
-        <section class="">
+        <section>
           <form action="">
-            <!--Grid row-->
-            <div class="row d-flex justify-content-center">
-              <!--Grid column-->
+            <!-- Grid row -->
+            <div class="row justify-content-center">
+              <!-- Grid column -->
               <div class="col-auto">
                 <p class="pt-2">
-                  <strong>Sign up for our newsletter</strong>
+                  <strong>Interested in Joining the Project</strong>
                 </p>
               </div>
-              <!--Grid column-->
+              <!-- Grid column -->
 
-              <!--Grid column-->
+              <!-- Grid column -->
               <div class="col-md-5 col-12">
                 <!-- Email input -->
                 <div class="form-outline form-white mb-4">
@@ -183,18 +198,18 @@
                   <label class="form-label" for="form5Example29">Email address</label>
                 </div>
               </div>
-              <!--Grid column-->
+              <!-- Grid column -->
 
-              <!--Grid column-->
+              <!-- Grid column -->
               <div class="col-auto">
                 <!-- Submit button -->
                 <button type="submit" class="btn btn-outline-light mb-4">
-                  Subscribe
+                  Register
                 </button>
               </div>
-              <!--Grid column-->
+              <!-- Grid column -->
             </div>
-            <!--Grid row-->
+            <!-- Grid row -->
           </form>
         </section>
         <!-- Section: Form -->
@@ -203,8 +218,8 @@
 
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        © 2023 Copyright:
+        <a class="text-white" href="https://github.com/toppy007/covered-flask-python-app/blob/main/LICENSE">MIT License Christopher Toplisek</a>
       </div>
       <!-- Copyright -->
     </footer>
