--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -40,34 +40,8 @@
       }
     </style>
   </head>
-
+  {% include 'nav.html' %}
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbar"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav">
-          {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="profile_main" href="/profile_main">Profile</a>
-          <a class="nav-item nav-link" id="ana_cre_main" href="/ana_cre_main">Analyze/Create</a>
-          <a class="nav-item nav-link" id="history" href="/history">History</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          {% else %}
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-          {% endif %}
-        </div>
-      </div>
-    </nav>
-
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
     'error' %}
@@ -173,55 +147,6 @@
           });
         </script>
       {% endblock %}
-
-    <footer class="bg-dark text-center text-white">
-      <!-- Grid container -->
-      <div class="container p-4">
-        <!-- Section: Form -->
-        <section>
-          <form action="">
-            <!-- Grid row -->
-            <div class="row justify-content-center">
-              <!-- Grid column -->
-              <div class="col-auto">
-                <p class="pt-2">
-                  <strong>Interested in Joining the Project</strong>
-                </p>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-5 col-12">
-                <!-- Email input -->
-                <div class="form-outline form-white mb-4">
-                  <input type="email" id="form5Example29" class="form-control" />
-                  <label class="form-label" for="form5Example29">Email address</label>
-                </div>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-auto">
-                <!-- Submit button -->
-                <button type="submit" class="btn btn-outline-light mb-4">
-                  Register
-                </button>
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
-          </form>
-        </section>
-        <!-- Section: Form -->
-      </div>
-      <!-- Grid container -->
-
-      <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2023 Copyright:
-        <a class="text-white" href="https://github.com/toppy007/covered-flask-python-app/blob/main/LICENSE">MIT License Christopher Toplisek</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
+      {% include 'footer.html' %}
   </body>
 </html>
