split the nav bar html and footer into seperate files

--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+
 <footer class="bg-dark text-center text-white">
     <!-- Grid container -->
     <div class="container p-4">
