--- a/website/templates/history/history_main.html
+++ b/website/templates/history/history_main.html
@@ -6,8 +6,10 @@
 <h1 align="left">Job Application History</h1>
 <br />
 <button type="button" class="btn btn-primary" id="data">Job Application History</button>
-<button type="button" class="btn btn-primary" id="analytics">Job Analytics</button>
+<button type="button" class="btn btn-primary ml-2" id="analytics">Job Analytics</button>
 <br />
+<br />
+
 <div id="history-data">
     {% include "history/history_data_table.html" %}
 </div>
