--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
 
 <footer class="bg-dark text-center text-white">
-    <div class="container p-4">
+    <div class="container p-3">
       <section>
         <form action="">
           <div class="row justify-content-center">
@@ -10,8 +10,8 @@
                 <strong>Interested in Joining the Project</strong>
               </p>
             </div>
-            <div class="col-md-5 col-12">
-              <div class="form-outline form-white mb-4">
+            <div class="col-md-6 col-4">
+              <div class="form-outline form-white">
                 <input type="email" id="form5Example29" class="form-control" />
                 <label class="form-label" for="form5Example29">Email address</label>
               </div>
@@ -25,6 +25,7 @@
         </form>
       </section>
     </div>
+
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2023 Copyright:
       <a class="text-white" href="https://github.com/toppy007/covered-flask-python-app/blob/main/LICENSE">MIT License Christopher Toplisek</a>
