--- a/website/templates/analysis_create/ana_cre_dashboard_output.html
+++ b/website/templates/analysis_create/ana_cre_dashboard_output.html
@@ -1,3 +1,5 @@
+<div id='ana_cre_dashboard_output'>
+
 <h3 align="left">Job Ad Analysis</h3>
 <br />
 
@@ -34,6 +36,8 @@
     </div>
   </div>
 </div>
+</div>
+
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
 
