--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,6 +19,11 @@
       href="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.css"
       crossorigin="anonymous"
     />
+    <link 
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      crossorigin="anonymous"
+    />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/popper.js@2.11.6/dist/umd/popper.min.js"></script>
