--- a/website/templates/nav.html
+++ b/website/templates/nav.html
@@ -1,4 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,5 +18,24 @@
             <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
             {% endif %}
         </div>
+    </div>
+
+    <div class="ml-auto">
+        <section >
+          <!-- Instagram -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="bi bi-instagram"></i
+            ></a>
+      
+          <!-- Linkedin -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+      
+          <!-- Github -->
+          <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+            ><i class="bi bi-github"></i>
+          </a>
+        </section>
     </div>
 </nav>
